parser_patito.py
import ply.yacc as yacc
from lex_patito import tokens, build_lexer

lexer = build_lexer()

precedence = (
    ('left', 'GREATERTHAN', 'LESSTHAN', 'NOTEQ'),
    ('left', 'PLUS', 'MINUS'),
    ('left', 'MULT', 'DIVIDE'),
)

start = 'programa'

# ----- 1. Programa -----
def p_programa(p):
    '''programa : PROGRAMA ID SEMICOLON skipVars cycleFuncs INICIO CUERPO FIN'''
    p[0] = ('programa', p[2], p[4], p[5], p[7])

def p_skipVars(p):
    '''skipVars :
                  | VARS_sect '''
    if len(p) == 1:
        p[0] = None
    else:
        p[0] = p[1]

def p_cycleFuncs(p):
    '''cycleFuncs :
                   | FUNCS cycleFuncs '''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = [p[1]] + p[2]

# ----- 2. Cuerpo -----
def p_CUERPO(p):
    '''CUERPO : LEFTBRACE cycleEst RIGHTBRACE'''
    p[0] = ('CUERPO', p[2])

def p_cycleEst(p):
    '''cycleEst :
                 | ESTATUTO cycleEst '''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = [p[1]] + p[2]

# ----- 3. Asigna ------
def p_ASIGNA(p):
    '''ASIGNA : ID ASSIGN EXPRESION SEMICOLON'''
    p[0] = ('ASIGNA', p[1], p[3])

# ----- 4. CTE -----
def p_CTE_ent(p):
    '''CTE : CTE_ENT'''
    p[0] = ("cte_ent", p[1])

def p_CTE_float(p):
    '''CTE : CTE_FLOAT'''
    p[0] = ("cte_float", p[1])

# ----- 10. TIPO -----
def p_TIPO(p):
    '''TIPO : ENTERO
            | FLOTANTE'''
    if p.slice[1].type == 'ENTERO':
        p[0] = ('entero',)
    else:
        p[0] = ('flotante',)

# ----- 5. Funciones -----
def p_FUNCS(p):
    '''FUNCS : typeNull ID LEFTPAREN p_Follow RIGHTPAREN LEFTBRACE skipVars CUERPO RIGHTBRACE SEMICOLON'''
    p[0] = ('FUNCS', p[1], p[2], p[4], p[7], p[8])

def p_typeNull(p):
    '''typeNull : NULA
                 | TIPO'''
    p[0] = p[1]

def p_p_Follow(p):
    '''p_Follow :
                | ID COLON TIPO commaCycleFuncs '''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = [(p[1], p[3])] + p[4]

def p_commaCycleFuncs(p):
    '''commaCycleFuncs :
                       | COMMA p_Follow '''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = p[2]

# ----- 6. ESTATUTO -----
def p_ESTATUTO_asigna(p):
    '''ESTATUTO : ASIGNA'''
    p[0] = p[1]

def p_ESTATUTO_condicional(p):
    '''ESTATUTO : CONDICION'''
    p[0] = p[1]

def p_ESTATUTO_ciclo(p):
    '''ESTATUTO : CICLO'''
    p[0] = p[1]

def p_ESTATUTO_llamada(p):
    '''ESTATUTO : LLAMADA SEMICOLON'''
    p[0] = ('ESTLLAMADA', p[1])

def p_ESTATUTO_imprime(p):
    '''ESTATUTO : IMPRIME'''
    p[0] = p[1]

def p_ESTATUTO_est(p):
    '''ESTATUTO : LEFTBRACKET ESTATUTO RIGHTBRACKET'''
    p[0] = ('ESTBRACKET', p[2])

# ----- 7. EXPRESION -----
def p_EXPRESION(p):
    '''EXPRESION : EXP signsExp'''
    if p[2] is None:
        p[0] = p[1]
    else:
        op, right = p[2]
        p[0] = ("relop", op, p[1], right)

def p_signsExp(p):
    '''signsExp :
                 | GREATERTHAN EXP
                 | LESSTHAN EXP
                 | EQUAL EXP
                 | NOTEQ EXP'''
    if len(p) == 1:
        p[0] = None
    else:
        if p.slice[1].type == 'GREATERTHAN':
            op = '>'
        elif p.slice[1].type == 'LESSTHAN':
            op = '<'
        elif p.slice[1].type == 'NOTEQ':
            op = '!='
        else:
            op = '=='
        p[0] = (op, p[2])

# ----- 8. EXP -----
def p_EXP(p):
    '''EXP : TERMINO SoR'''
    if p[2] is None:
        p[0] = p[1]
    else:
        op, right = p[2]
        p[0] = ("binop", op, p[1], right)

def p_SoR(p):
    '''SoR :
           | PLUS EXP
           | MINUS EXP'''
    if len(p) == 1:
        p[0] = None
    else:
        op = '+' if p.slice[1].type == 'PLUS' else '-'
        p[0] = (op, p[2])

# ----- 9. TERMINO -----
def p_TERMINO(p):
    '''TERMINO : FACTOR MoD'''
    if p[2] is None:
        p[0] = p[1]
    else:
        op, right = p[2]
        p[0] = ("binop", op, p[1], right)

def p_MoD(p):
    '''MoD :
            | MULT TERMINO
            | DIVIDE TERMINO'''
    if len(p) == 1:
        p[0] = None
    else:
        op = '*' if p.slice[1].type == 'MULT' else '/'
        p[0] = (op, p[2])

# ----- 11. FACTOR -----
def p_FACTOR_exp(p):
    '''FACTOR : LEFTPAREN EXPRESION RIGHTPAREN'''
    p[0] = p[2]

def p_FACTOR_llamada(p):
    '''FACTOR : LLAMADA'''
    p[0] = p[1]

def p_FACTOR_sign(p):
    '''FACTOR : signSoR skipID'''
    if p[1] is None:
        p[0] = p[2]
    else:
        p[0] = ("unop", p[1], p[2])

def p_signSoR(p):
    '''signSoR :
               | PLUS
               | MINUS'''
    if len(p) == 1:
        p[0] = None
    else:
        p[0] = '+' if p.slice[1].type == 'PLUS' else '-'

def p_skipID(p):
    '''skipID : ID
              | CTE'''
    if p.slice[1].type == 'ID':
        p[0] = ("id", p[1])
    else:
        p[0] = p[1]

# ----- 12. LLAMADA -----
def p_LLAMADA(p):
    '''LLAMADA : ID LEFTPAREN args RIGHTPAREN'''
    p[0] = ('LLAMADA', p[1], p[3])

def p_args(p):
    '''args :
            | EXPRESION argsCycle'''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = [p[1]] + p[2]

def p_argsCycle(p):
    '''argsCycle :
                 | COMMA EXPRESION argsCycle '''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = [p[2]] + p[3]

# ----- 13. VARS -----
def p_VARS_sect(p):
    '''VARS_sect : VARS p_VARS'''
    p[0] = ('VARS', p[2])

def p_p_VARS(p):
    '''p_VARS : ID cycleID COLON TIPO SEMICOLON cycleP_VARS'''
    names = [p[1]] + p[2]
    decls = [("decl", n, p[4]) for n in names]
    p[0] = decls + p[6]

def p_cycleID(p):
    '''cycleID :
                | COMMA ID cycleID '''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = [p[2]] + p[3]

def p_cycleP_VARS(p):
    '''cycleP_VARS :
                    | p_VARS'''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = p[1]

# ----- 14. IMPRIME -----
def p_IMPRIME(p):
    '''IMPRIME : ESCRIBE LEFTPAREN imp cycleImp RIGHTPAREN SEMICOLON'''
    p[0] = ('IMPRIME', [p[3]] + p[4])

def p_imp(p):
    '''imp : LETRERO
           | EXPRESION'''
    if p.slice[1].type == 'LETRERO':
        p[0] = ("letrero", p[1])
    else:
        p[0] = p[1]

def p_cycleImp(p):
    '''cycleImp :
                 | COMMA imp cycleImp '''
    if len(p) == 1:
        p[0] = []
    else:
        p[0] = [p[2]] + p[3]

# ----- 15. CICLO -----
def p_CICLO(p):
    '''CICLO : MIENTRAS LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO SEMICOLON'''
    p[0] = ("mientras", p[3], p[6])

# ----- 16. CONDICION -----
def p_CONDICION(p):
    '''CONDICION : SI LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO sinoCuerpo SEMICOLON'''
    p[0] = ('si', p[3], p[6], p[7])

def p_sinoCuerpo(p):
    '''sinoCuerpo :
                   | SINO CUERPO '''
    if len(p) == 1:
        p[0] = None
    else:
        p[0] = ("sino", p[2])


# ----- ERROR -----
def p_error(p):
    if p:
        print(f"[SYN] Error de sintaxis en '{p.value}' (token {p.type})")
    else:
        print("[SYN] Error de sintaxis en EOF")

parser = yacc.yacc()

if __name__ == "__main__":
    data = """
    programa p;
    inicio {
        x = 3 + 5;
    }
    fin
    """
    result = parser.parse(data, lexer=lexer)
    print("AST:")
    print(result)
