parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMICOLON skipVars cycleFuncs INICIO CUERPO FIN
Rule 2     skipVars -> <empty>
Rule 3     skipVars -> VARS_sect
Rule 4     cycleFuncs -> <empty>
Rule 5     cycleFuncs -> FUNCS cycleFuncs
Rule 6     CUERPO -> LEFTBRACE cycleEst RIGHTBRACE
Rule 7     cycleEst -> <empty>
Rule 8     cycleEst -> ESTATUTO cycleEst
Rule 9     ASIGNA -> ID ASSIGN EXPRESION SEMICOLON
Rule 10    CTE -> CTE_ENT
Rule 11    CTE -> CTE_FLOAT
Rule 12    TIPO -> ENTERO
Rule 13    TIPO -> FLOTANTE
Rule 14    FUNCS -> typeNull ID LEFTPAREN p_Follow RIGHTPAREN LEFTBRACE skipVars CUERPO RIGHTBRACE SEMICOLON
Rule 15    typeNull -> NULA
Rule 16    typeNull -> TIPO
Rule 17    p_Follow -> <empty>
Rule 18    p_Follow -> ID COLON TIPO commaCycleFuncs
Rule 19    commaCycleFuncs -> <empty>
Rule 20    commaCycleFuncs -> COMMA p_Follow
Rule 21    ESTATUTO -> ASIGNA
Rule 22    ESTATUTO -> CONDICION
Rule 23    ESTATUTO -> CICLO
Rule 24    ESTATUTO -> LLAMADA SEMICOLON
Rule 25    ESTATUTO -> IMPRIME
Rule 26    ESTATUTO -> LEFTBRACKET ESTATUTO RIGHTBRACKET
Rule 27    EXPRESION -> EXP signsExp
Rule 28    signsExp -> <empty>
Rule 29    signsExp -> GREATERTHAN EXP
Rule 30    signsExp -> LESSTHAN EXP
Rule 31    signsExp -> EQUAL EXP
Rule 32    signsExp -> NOTEQ EXP
Rule 33    EXP -> EXP PLUS TERMINO
Rule 34    EXP -> EXP MINUS TERMINO
Rule 35    EXP -> TERMINO
Rule 36    TERMINO -> TERMINO MULT FACTOR
Rule 37    TERMINO -> TERMINO DIVIDE FACTOR
Rule 38    TERMINO -> FACTOR
Rule 39    FACTOR -> LEFTPAREN EXPRESION RIGHTPAREN
Rule 40    FACTOR -> LLAMADA
Rule 41    FACTOR -> PLUS skipID
Rule 42    FACTOR -> MINUS skipID
Rule 43    FACTOR -> skipID
Rule 44    skipID -> ID
Rule 45    skipID -> CTE
Rule 46    LLAMADA -> ID LEFTPAREN args RIGHTPAREN
Rule 47    args -> <empty>
Rule 48    args -> EXPRESION argsCycle
Rule 49    argsCycle -> <empty>
Rule 50    argsCycle -> COMMA EXPRESION argsCycle
Rule 51    VARS_sect -> VARS p_VARS
Rule 52    p_VARS -> ID cycleID COLON TIPO SEMICOLON cycleP_VARS
Rule 53    cycleID -> <empty>
Rule 54    cycleID -> COMMA ID cycleID
Rule 55    cycleP_VARS -> <empty>
Rule 56    cycleP_VARS -> p_VARS
Rule 57    IMPRIME -> ESCRIBE LEFTPAREN imp cycleImp RIGHTPAREN SEMICOLON
Rule 58    imp -> LETRERO
Rule 59    imp -> EXPRESION
Rule 60    cycleImp -> <empty>
Rule 61    cycleImp -> COMMA imp cycleImp
Rule 62    CICLO -> MIENTRAS LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO SEMICOLON
Rule 63    CONDICION -> SI LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO sinoCuerpo SEMICOLON
Rule 64    sinoCuerpo -> <empty>
Rule 65    sinoCuerpo -> SINO CUERPO

Terminals, with rules where they appear

ASSIGN               : 9
COLON                : 18 52
COMMA                : 20 50 54 61
CTE_ENT              : 10
CTE_FLOAT            : 11
DIVIDE               : 37
ENTERO               : 12
EQUAL                : 31
ESCRIBE              : 57
FIN                  : 1
FLOTANTE             : 13
GREATERTHAN          : 29
HAZ                  : 62 63
ID                   : 1 9 14 18 44 46 52 54
INICIO               : 1
LEFTBRACE            : 6 14
LEFTBRACKET          : 26
LEFTPAREN            : 14 39 46 57 62 63
LESSTHAN             : 30
LETRERO              : 58
MIENTRAS             : 62
MINUS                : 34 42
MULT                 : 36
NOTEQ                : 32
NULA                 : 15
PLUS                 : 33 41
PROGRAMA             : 1
RIGHTBRACE           : 6 14
RIGHTBRACKET         : 26
RIGHTPAREN           : 14 39 46 57 62 63
SEMICOLON            : 1 9 14 24 52 57 62 63
SI                   : 63
SINO                 : 65
VARS                 : 51
error                : 

Nonterminals, with rules where they appear

ASIGNA               : 21
CICLO                : 23
CONDICION            : 22
CTE                  : 45
CUERPO               : 1 14 62 63 65
ESTATUTO             : 8 26
EXP                  : 27 29 30 31 32 33 34
EXPRESION            : 9 39 48 50 59 62 63
FACTOR               : 36 37 38
FUNCS                : 5
IMPRIME              : 25
LLAMADA              : 24 40
TERMINO              : 33 34 35 36 37
TIPO                 : 16 18 52
VARS_sect            : 3
args                 : 46
argsCycle            : 48 50
commaCycleFuncs      : 18
cycleEst             : 6 8
cycleFuncs           : 1 5
cycleID              : 52 54
cycleImp             : 57 61
cycleP_VARS          : 52
imp                  : 57 61
p_Follow             : 14 20
p_VARS               : 51 56
programa             : 0
signsExp             : 27
sinoCuerpo           : 63
skipID               : 41 42 43
skipVars             : 1 14
typeNull             : 14

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMICOLON skipVars cycleFuncs INICIO CUERPO FIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMICOLON skipVars cycleFuncs INICIO CUERPO FIN

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMICOLON skipVars cycleFuncs INICIO CUERPO FIN

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMICOLON . skipVars cycleFuncs INICIO CUERPO FIN
    (2) skipVars -> .
    (3) skipVars -> . VARS_sect
    (51) VARS_sect -> . VARS p_VARS

    NULA            reduce using rule 2 (skipVars -> .)
    ENTERO          reduce using rule 2 (skipVars -> .)
    FLOTANTE        reduce using rule 2 (skipVars -> .)
    INICIO          reduce using rule 2 (skipVars -> .)
    VARS            shift and go to state 7

    skipVars                       shift and go to state 5
    VARS_sect                      shift and go to state 6

state 5

    (1) programa -> PROGRAMA ID SEMICOLON skipVars . cycleFuncs INICIO CUERPO FIN
    (4) cycleFuncs -> .
    (5) cycleFuncs -> . FUNCS cycleFuncs
    (14) FUNCS -> . typeNull ID LEFTPAREN p_Follow RIGHTPAREN LEFTBRACE skipVars CUERPO RIGHTBRACE SEMICOLON
    (15) typeNull -> . NULA
    (16) typeNull -> . TIPO
    (12) TIPO -> . ENTERO
    (13) TIPO -> . FLOTANTE

    INICIO          reduce using rule 4 (cycleFuncs -> .)
    NULA            shift and go to state 11
    ENTERO          shift and go to state 13
    FLOTANTE        shift and go to state 14

    cycleFuncs                     shift and go to state 8
    FUNCS                          shift and go to state 9
    typeNull                       shift and go to state 10
    TIPO                           shift and go to state 12

state 6

    (3) skipVars -> VARS_sect .

    NULA            reduce using rule 3 (skipVars -> VARS_sect .)
    ENTERO          reduce using rule 3 (skipVars -> VARS_sect .)
    FLOTANTE        reduce using rule 3 (skipVars -> VARS_sect .)
    INICIO          reduce using rule 3 (skipVars -> VARS_sect .)
    LEFTBRACE       reduce using rule 3 (skipVars -> VARS_sect .)


state 7

    (51) VARS_sect -> VARS . p_VARS
    (52) p_VARS -> . ID cycleID COLON TIPO SEMICOLON cycleP_VARS

    ID              shift and go to state 16

    p_VARS                         shift and go to state 15

state 8

    (1) programa -> PROGRAMA ID SEMICOLON skipVars cycleFuncs . INICIO CUERPO FIN

    INICIO          shift and go to state 17


state 9

    (5) cycleFuncs -> FUNCS . cycleFuncs
    (4) cycleFuncs -> .
    (5) cycleFuncs -> . FUNCS cycleFuncs
    (14) FUNCS -> . typeNull ID LEFTPAREN p_Follow RIGHTPAREN LEFTBRACE skipVars CUERPO RIGHTBRACE SEMICOLON
    (15) typeNull -> . NULA
    (16) typeNull -> . TIPO
    (12) TIPO -> . ENTERO
    (13) TIPO -> . FLOTANTE

    INICIO          reduce using rule 4 (cycleFuncs -> .)
    NULA            shift and go to state 11
    ENTERO          shift and go to state 13
    FLOTANTE        shift and go to state 14

    FUNCS                          shift and go to state 9
    cycleFuncs                     shift and go to state 18
    typeNull                       shift and go to state 10
    TIPO                           shift and go to state 12

state 10

    (14) FUNCS -> typeNull . ID LEFTPAREN p_Follow RIGHTPAREN LEFTBRACE skipVars CUERPO RIGHTBRACE SEMICOLON

    ID              shift and go to state 19


state 11

    (15) typeNull -> NULA .

    ID              reduce using rule 15 (typeNull -> NULA .)


state 12

    (16) typeNull -> TIPO .

    ID              reduce using rule 16 (typeNull -> TIPO .)


state 13

    (12) TIPO -> ENTERO .

    ID              reduce using rule 12 (TIPO -> ENTERO .)
    SEMICOLON       reduce using rule 12 (TIPO -> ENTERO .)
    COMMA           reduce using rule 12 (TIPO -> ENTERO .)
    RIGHTPAREN      reduce using rule 12 (TIPO -> ENTERO .)


state 14

    (13) TIPO -> FLOTANTE .

    ID              reduce using rule 13 (TIPO -> FLOTANTE .)
    SEMICOLON       reduce using rule 13 (TIPO -> FLOTANTE .)
    COMMA           reduce using rule 13 (TIPO -> FLOTANTE .)
    RIGHTPAREN      reduce using rule 13 (TIPO -> FLOTANTE .)


state 15

    (51) VARS_sect -> VARS p_VARS .

    NULA            reduce using rule 51 (VARS_sect -> VARS p_VARS .)
    ENTERO          reduce using rule 51 (VARS_sect -> VARS p_VARS .)
    FLOTANTE        reduce using rule 51 (VARS_sect -> VARS p_VARS .)
    INICIO          reduce using rule 51 (VARS_sect -> VARS p_VARS .)
    LEFTBRACE       reduce using rule 51 (VARS_sect -> VARS p_VARS .)


state 16

    (52) p_VARS -> ID . cycleID COLON TIPO SEMICOLON cycleP_VARS
    (53) cycleID -> .
    (54) cycleID -> . COMMA ID cycleID

    COLON           reduce using rule 53 (cycleID -> .)
    COMMA           shift and go to state 21

    cycleID                        shift and go to state 20

state 17

    (1) programa -> PROGRAMA ID SEMICOLON skipVars cycleFuncs INICIO . CUERPO FIN
    (6) CUERPO -> . LEFTBRACE cycleEst RIGHTBRACE

    LEFTBRACE       shift and go to state 23

    CUERPO                         shift and go to state 22

state 18

    (5) cycleFuncs -> FUNCS cycleFuncs .

    INICIO          reduce using rule 5 (cycleFuncs -> FUNCS cycleFuncs .)


state 19

    (14) FUNCS -> typeNull ID . LEFTPAREN p_Follow RIGHTPAREN LEFTBRACE skipVars CUERPO RIGHTBRACE SEMICOLON

    LEFTPAREN       shift and go to state 24


state 20

    (52) p_VARS -> ID cycleID . COLON TIPO SEMICOLON cycleP_VARS

    COLON           shift and go to state 25


state 21

    (54) cycleID -> COMMA . ID cycleID

    ID              shift and go to state 26


state 22

    (1) programa -> PROGRAMA ID SEMICOLON skipVars cycleFuncs INICIO CUERPO . FIN

    FIN             shift and go to state 27


state 23

    (6) CUERPO -> LEFTBRACE . cycleEst RIGHTBRACE
    (7) cycleEst -> .
    (8) cycleEst -> . ESTATUTO cycleEst
    (21) ESTATUTO -> . ASIGNA
    (22) ESTATUTO -> . CONDICION
    (23) ESTATUTO -> . CICLO
    (24) ESTATUTO -> . LLAMADA SEMICOLON
    (25) ESTATUTO -> . IMPRIME
    (26) ESTATUTO -> . LEFTBRACKET ESTATUTO RIGHTBRACKET
    (9) ASIGNA -> . ID ASSIGN EXPRESION SEMICOLON
    (63) CONDICION -> . SI LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO sinoCuerpo SEMICOLON
    (62) CICLO -> . MIENTRAS LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO SEMICOLON
    (46) LLAMADA -> . ID LEFTPAREN args RIGHTPAREN
    (57) IMPRIME -> . ESCRIBE LEFTPAREN imp cycleImp RIGHTPAREN SEMICOLON

    RIGHTBRACE      reduce using rule 7 (cycleEst -> .)
    LEFTBRACKET     shift and go to state 35
    ID              shift and go to state 36
    SI              shift and go to state 37
    MIENTRAS        shift and go to state 38
    ESCRIBE         shift and go to state 39

    cycleEst                       shift and go to state 28
    ESTATUTO                       shift and go to state 29
    ASIGNA                         shift and go to state 30
    CONDICION                      shift and go to state 31
    CICLO                          shift and go to state 32
    LLAMADA                        shift and go to state 33
    IMPRIME                        shift and go to state 34

state 24

    (14) FUNCS -> typeNull ID LEFTPAREN . p_Follow RIGHTPAREN LEFTBRACE skipVars CUERPO RIGHTBRACE SEMICOLON
    (17) p_Follow -> .
    (18) p_Follow -> . ID COLON TIPO commaCycleFuncs

    RIGHTPAREN      reduce using rule 17 (p_Follow -> .)
    ID              shift and go to state 40

    p_Follow                       shift and go to state 41

state 25

    (52) p_VARS -> ID cycleID COLON . TIPO SEMICOLON cycleP_VARS
    (12) TIPO -> . ENTERO
    (13) TIPO -> . FLOTANTE

    ENTERO          shift and go to state 13
    FLOTANTE        shift and go to state 14

    TIPO                           shift and go to state 42

state 26

    (54) cycleID -> COMMA ID . cycleID
    (53) cycleID -> .
    (54) cycleID -> . COMMA ID cycleID

    COLON           reduce using rule 53 (cycleID -> .)
    COMMA           shift and go to state 21

    cycleID                        shift and go to state 43

state 27

    (1) programa -> PROGRAMA ID SEMICOLON skipVars cycleFuncs INICIO CUERPO FIN .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMICOLON skipVars cycleFuncs INICIO CUERPO FIN .)


state 28

    (6) CUERPO -> LEFTBRACE cycleEst . RIGHTBRACE

    RIGHTBRACE      shift and go to state 44


state 29

    (8) cycleEst -> ESTATUTO . cycleEst
    (7) cycleEst -> .
    (8) cycleEst -> . ESTATUTO cycleEst
    (21) ESTATUTO -> . ASIGNA
    (22) ESTATUTO -> . CONDICION
    (23) ESTATUTO -> . CICLO
    (24) ESTATUTO -> . LLAMADA SEMICOLON
    (25) ESTATUTO -> . IMPRIME
    (26) ESTATUTO -> . LEFTBRACKET ESTATUTO RIGHTBRACKET
    (9) ASIGNA -> . ID ASSIGN EXPRESION SEMICOLON
    (63) CONDICION -> . SI LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO sinoCuerpo SEMICOLON
    (62) CICLO -> . MIENTRAS LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO SEMICOLON
    (46) LLAMADA -> . ID LEFTPAREN args RIGHTPAREN
    (57) IMPRIME -> . ESCRIBE LEFTPAREN imp cycleImp RIGHTPAREN SEMICOLON

    RIGHTBRACE      reduce using rule 7 (cycleEst -> .)
    LEFTBRACKET     shift and go to state 35
    ID              shift and go to state 36
    SI              shift and go to state 37
    MIENTRAS        shift and go to state 38
    ESCRIBE         shift and go to state 39

    ESTATUTO                       shift and go to state 29
    cycleEst                       shift and go to state 45
    ASIGNA                         shift and go to state 30
    CONDICION                      shift and go to state 31
    CICLO                          shift and go to state 32
    LLAMADA                        shift and go to state 33
    IMPRIME                        shift and go to state 34

state 30

    (21) ESTATUTO -> ASIGNA .

    LEFTBRACKET     reduce using rule 21 (ESTATUTO -> ASIGNA .)
    ID              reduce using rule 21 (ESTATUTO -> ASIGNA .)
    SI              reduce using rule 21 (ESTATUTO -> ASIGNA .)
    MIENTRAS        reduce using rule 21 (ESTATUTO -> ASIGNA .)
    ESCRIBE         reduce using rule 21 (ESTATUTO -> ASIGNA .)
    RIGHTBRACE      reduce using rule 21 (ESTATUTO -> ASIGNA .)
    RIGHTBRACKET    reduce using rule 21 (ESTATUTO -> ASIGNA .)


state 31

    (22) ESTATUTO -> CONDICION .

    LEFTBRACKET     reduce using rule 22 (ESTATUTO -> CONDICION .)
    ID              reduce using rule 22 (ESTATUTO -> CONDICION .)
    SI              reduce using rule 22 (ESTATUTO -> CONDICION .)
    MIENTRAS        reduce using rule 22 (ESTATUTO -> CONDICION .)
    ESCRIBE         reduce using rule 22 (ESTATUTO -> CONDICION .)
    RIGHTBRACE      reduce using rule 22 (ESTATUTO -> CONDICION .)
    RIGHTBRACKET    reduce using rule 22 (ESTATUTO -> CONDICION .)


state 32

    (23) ESTATUTO -> CICLO .

    LEFTBRACKET     reduce using rule 23 (ESTATUTO -> CICLO .)
    ID              reduce using rule 23 (ESTATUTO -> CICLO .)
    SI              reduce using rule 23 (ESTATUTO -> CICLO .)
    MIENTRAS        reduce using rule 23 (ESTATUTO -> CICLO .)
    ESCRIBE         reduce using rule 23 (ESTATUTO -> CICLO .)
    RIGHTBRACE      reduce using rule 23 (ESTATUTO -> CICLO .)
    RIGHTBRACKET    reduce using rule 23 (ESTATUTO -> CICLO .)


state 33

    (24) ESTATUTO -> LLAMADA . SEMICOLON

    SEMICOLON       shift and go to state 46


state 34

    (25) ESTATUTO -> IMPRIME .

    LEFTBRACKET     reduce using rule 25 (ESTATUTO -> IMPRIME .)
    ID              reduce using rule 25 (ESTATUTO -> IMPRIME .)
    SI              reduce using rule 25 (ESTATUTO -> IMPRIME .)
    MIENTRAS        reduce using rule 25 (ESTATUTO -> IMPRIME .)
    ESCRIBE         reduce using rule 25 (ESTATUTO -> IMPRIME .)
    RIGHTBRACE      reduce using rule 25 (ESTATUTO -> IMPRIME .)
    RIGHTBRACKET    reduce using rule 25 (ESTATUTO -> IMPRIME .)


state 35

    (26) ESTATUTO -> LEFTBRACKET . ESTATUTO RIGHTBRACKET
    (21) ESTATUTO -> . ASIGNA
    (22) ESTATUTO -> . CONDICION
    (23) ESTATUTO -> . CICLO
    (24) ESTATUTO -> . LLAMADA SEMICOLON
    (25) ESTATUTO -> . IMPRIME
    (26) ESTATUTO -> . LEFTBRACKET ESTATUTO RIGHTBRACKET
    (9) ASIGNA -> . ID ASSIGN EXPRESION SEMICOLON
    (63) CONDICION -> . SI LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO sinoCuerpo SEMICOLON
    (62) CICLO -> . MIENTRAS LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO SEMICOLON
    (46) LLAMADA -> . ID LEFTPAREN args RIGHTPAREN
    (57) IMPRIME -> . ESCRIBE LEFTPAREN imp cycleImp RIGHTPAREN SEMICOLON

    LEFTBRACKET     shift and go to state 35
    ID              shift and go to state 36
    SI              shift and go to state 37
    MIENTRAS        shift and go to state 38
    ESCRIBE         shift and go to state 39

    ESTATUTO                       shift and go to state 47
    ASIGNA                         shift and go to state 30
    CONDICION                      shift and go to state 31
    CICLO                          shift and go to state 32
    LLAMADA                        shift and go to state 33
    IMPRIME                        shift and go to state 34

state 36

    (9) ASIGNA -> ID . ASSIGN EXPRESION SEMICOLON
    (46) LLAMADA -> ID . LEFTPAREN args RIGHTPAREN

    ASSIGN          shift and go to state 48
    LEFTPAREN       shift and go to state 49


state 37

    (63) CONDICION -> SI . LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO sinoCuerpo SEMICOLON

    LEFTPAREN       shift and go to state 50


state 38

    (62) CICLO -> MIENTRAS . LEFTPAREN EXPRESION RIGHTPAREN HAZ CUERPO SEMICOLON

    LEFTPAREN       shift and go to state 51


state 39

    (57) IMPRIME -> ESCRIBE . LEFTPAREN imp cycleImp RIGHTPAREN SEMICOLON

    LEFTPAREN       shift and go to state 52


state 40

    (18) p_Follow -> ID . COLON TIPO commaCycleFuncs

    COLON           shift and go to state 53


state 41

    (14) FUNCS -> typeNull ID LEFTPAREN p_Follow . RIGHTPAREN LEFTBRACE skipVars CUERPO RIGHTBRACE SEMICOLON

    RIGHTPAREN      shift and go to state 54


state 42

    (52) p_VARS -> ID cycleID COLON TIPO . SEMICOLON cycleP_VARS

    SEMICOLON       shift and go to state 55


state 43

    (54) cycleID -> COMMA ID cycleID .

    COLON           reduce using rule 54 (cycleID -> COMMA ID cycleID .)


state 44

    (6) CUERPO -> LEFTBRACE cycleEst RIGHTBRACE .

    FIN             reduce using rule 6 (CUERPO -> LEFTBRACE cycleEst RIGHTBRACE .)
    RIGHTBRACE      reduce using rule 6 (CUERPO -> LEFTBRACE cycleEst RIGHTBRACE .)
    SINO            reduce using rule 6 (CUERPO -> LEFTBRACE cycleEst RIGHTBRACE .)
    SEMICOLON       reduce using rule 6 (CUERPO -> LEFTBRACE cycleEst RIGHTBRACE .)


state 45

    (8) cycleEst -> ESTATUTO cycleEst .

    RIGHTBRACE      reduce using rule 8 (cycleEst -> ESTATUTO cycleEst .)


state 46

    (24) ESTATUTO -> LLAMADA SEMICOLON .

    LEFTBRACKET     reduce using rule 24 (ESTATUTO -> LLAMADA SEMICOLON .)
    ID              reduce using rule 24 (ESTATUTO -> LLAMADA SEMICOLON .)
    SI              reduce using rule 24 (ESTATUTO -> LLAMADA SEMICOLON .)
    MIENTRAS        reduce using rule 24 (ESTATUTO -> LLAMADA SEMICOLON .)
    ESCRIBE         reduce using rule 24 (ESTATUTO -> LLAMADA SEMICOLON .)
    RIGHTBRACE      reduce using rule 24 (ESTATUTO -> LLAMADA SEMICOLON .)
    RIGHTBRACKET    reduce using rule 24 (ESTATUTO -> LLAMADA SEMICOLON .)


state 47

    (26) ESTATUTO -> LEFTBRACKET ESTATUTO . RIGHTBRACKET

    RIGHTBRACKET    shift and go to state 56


state 48
